<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.banksite.oceanbank.SignupActivity" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/title"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:adjustViewBounds="true" />

    <TextView
        android:id="@+id/first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="50dp"
        android:text="@string/first_name" />

    <EditText
        android:id="@+id/firstNameField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/first_name"
        android:layout_alignBottom="@+id/first_name"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_toEndOf="@+id/first_name"
        android:layout_toRightOf="@+id/first_name"
        android:ems="10"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/first_name"
        android:layout_alignStart="@+id/first_name"
        android:layout_below="@+id/firstNameField"
        android:layout_marginTop="40dp"
        android:text="@string/last_name" />

    <EditText
        android:id="@+id/lastNameField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/last_name"
        android:layout_alignBottom="@+id/last_name"
        android:layout_alignLeft="@+id/firstNameField"
        android:layout_alignStart="@+id/firstNameField"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/last_name"
        android:layout_alignStart="@+id/last_name"
        android:layout_below="@+id/lastNameField"
        android:layout_marginTop="40dp"
        android:text="@string/email_title" />

    <EditText
        android:id="@+id/email_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/email"
        android:layout_alignBottom="@+id/email"
        android:layout_alignLeft="@+id/lastNameField"
        android:layout_alignStart="@+id/lastNameField"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_field"
        android:layout_alignStart="@+id/email_field"
        android:layout_alignLeft="@+id/email_field"
        android:layout_marginTop="15dp"
        android:id="@+id/email_confirm"
        android:text="Email requires '@' and '.' sign (i.e. 'john@ucsd.edu')" />

    <TextView
        android:id="@+id/phone_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/email"
        android:layout_alignStart="@+id/email"
        android:layout_below="@+id/email_confirm"
        android:layout_marginTop="10dp"
        android:text="@string/phone" />

    <EditText
        android:id="@+id/phoneField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/phone_title"
        android:layout_alignBottom="@+id/phone_title"
        android:layout_alignLeft="@+id/email_field"
        android:layout_alignStart="@+id/email_field"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/address_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/phone_title"
        android:layout_alignStart="@+id/phone_title"
        android:layout_below="@+id/phoneField"
        android:layout_marginTop="40dp"
        android:text="@string/address_title" />

    <EditText
        android:id="@+id/address_line1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/address_title"
        android:layout_alignBottom="@+id/address_title"
        android:layout_alignLeft="@+id/phoneField"
        android:layout_alignStart="@+id/phoneField"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="textPostalAddress" />

    <TextView
        android:id="@+id/birthday_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/address_title"
        android:layout_alignStart="@+id/address_title"
        android:layout_below="@+id/address_line1"
        android:layout_marginTop="40dp"
        android:text="Birthday:" />

    <TextView
        android:id="@+id/month_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/year_title"
        android:layout_alignStart="@+id/year_title"
        android:layout_below="@+id/year_title"
        android:layout_marginTop="20dp"
        android:text="          Month:" />

    <TextView
        android:id="@+id/day_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/month_title"
        android:layout_alignStart="@+id/month_title"
        android:layout_below="@+id/month_title"
        android:layout_marginTop="20dp"
        android:text="          Day:" />

    <TextView
        android:id="@+id/year_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/birthday_title"
        android:layout_alignStart="@+id/birthday_title"
        android:layout_below="@+id/birthday_title"
        android:layout_marginTop="20dp"
        android:text="          Year:" />

    <Button
        android:id="@+id/next_signup1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nextbutton1"
        android:layout_below="@+id/day_title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/month_spinner"
        android:layout_alignTop="@+id/month_title"
        android:layout_alignLeft="@+id/address_line1"
        android:layout_alignStart="@+id/address_line1" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/year_spinner"
        android:layout_alignTop="@+id/year_title"
        android:layout_alignLeft="@+id/month_spinner"
        android:layout_alignStart="@+id/month_spinner" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/day_spinner"
        android:layout_alignTop="@+id/day_title"
        android:layout_alignLeft="@+id/month_spinner"
        android:layout_alignStart="@+id/month_spinner"/>

</RelativeLayout>
</ScrollView>